# dotenv

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/dotenv/: dotenv.hpp
test/: CMakeLists.txt
test/source/: dotenv_test.cpp
